--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,22 @@
 *{
     font-family: Arial, Helvetica, sans-serif; /*idea- import a font */
+    margin: 0;
+    padding: 0;
 }
 
 header{
+    
+    
 
     background-color: rgb(37, 0, 34);
+    color: whitesmoke;
 
+
+}
+
+header h1{
+    padding: 15px;
+    text-align: left;
 }
 
 header nav {
@@ -14,4 +25,8 @@ header nav {
 
     color: whitesmoke;
 
+}
+
+header nav a {
+    margin: 15px;
 }
