--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
   /* Element Selectors */
   body {
     position: relative;
-    font-family: "Goudy Bookletter 1911", sans-serif;
+    font-family: Arial, Helvetica, sans-serif
     font-size: 20px;
     background-color: #FDF8F5;
     color: #4F4846;
@@ -19,18 +19,41 @@
   }
   
   main {
+      display: flex;
+      justify-content: flex-start;
+      align-content: center;
     padding: 60px 0;
   }
-  
-  li {
-    display: inline;
-    padding: 20px;
-    text-decoration: none;
+
+  header {
+    display: block;
+    
+    
+    
+    border-bottom: 5px solid #65660c;
   }
+
+  header h1 {
+    padding: 15px;
+      
+    
+      
+      
+  }
+  
+  nav {
+    display: inline-block;
+    justify-self: flex-end;
+    align-self: center;
+     
+    color: rgb(6, 245, 57);
+
+  }
+  
   
   a {
     text-decoration: none;
-    color: #FDF8F5;
+    color: #fc6006;
   }
   
   header,
@@ -38,15 +61,14 @@
     height: 60px;
     width: 100%;
     line-height: 60px;
-    background-color: #266150;
+    background-color: #240324;
+    color: whitesmoke;
   }
   
-  header {
-    position: fixed;
-    border-bottom: 10px solid #DDAF94;
-  }
+  
   
   footer {
+    text-align: center;
     position: absolute;
     margin-top: 0;
     bottom: 0;
@@ -55,19 +77,22 @@
   }
   
   figure {
+     
     margin-bottom: 40px;
   }
   
   img {
-    display: block;
+    height: 250px;
+    width: 250px;
+    display: flex;
     margin: 20px auto;
   }
   
   section {
     margin-bottom: 0;
     padding: 20px 10px 40px 10px;
-    border-top: 3px solid #DDAF94;
-    background-color:  #E8CEBF;
+    border-top: 3px solid #65660c;
+    background-color:  #e8dabf;
   }
   
   form {
@@ -75,7 +100,7 @@
     margin: 0 auto;
     width: 500px;
     padding: 10px;
-    border: 5px solid #DDAF94;
+    border: 5px solid #65660c;
     border-radius: 20px;
   }
   
@@ -88,7 +113,7 @@
   textarea {
     box-sizing: border-box;
     width: 300px;
-    border: 1px solid #4F4846;
+    border: 1px solid #65660c;
   }
   
   textarea {
@@ -104,11 +129,8 @@
   }
    
   /* Class Selectors */
-  .text-center {
-    text-align: center;
+  .picofme{
+
   }
   
-  .text-right {
-    text-align: right;
-  }
   
