--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,10 @@
   }
 
   
-
+h2 {
+  margin: 15px;
+  text-align: center;
+}
   
   
   
@@ -142,8 +145,9 @@
    
   /* Class Selectors */
   .picofme{
-    display: inline;
-    text-align: start;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     
 
@@ -182,9 +186,17 @@
     width:300px;
     padding: 20px;
     flex-direction: column;
-    justify-content: flex-start;
-    border-right: #240324;
+    justify-content: center;
+    align-items: center;
+    border-right: solid #240324;
     
+
+    
+  }#aboutme article{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 25px;
   }
   
   #contact{
