--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,16 +112,18 @@ h2 {
   
   form {
     /* Center the form on the page */
-    margin: 0 auto;
+    margin: 25px;
     width: 500px;
     padding: 10px;
     border: 5px solid #65660c;
     border-radius: 20px;
+    color: #240324;
   }
   
   label {
     display: inline-block;
     width: 100px;
+    
   }
     
   input, 
@@ -176,13 +178,13 @@ h2 {
     color: whitesmoke;
   }
 
-  #aboutme{
+  .main-section{
     display: flex;
     justify-content: flex-start;
 
 
   }
-  #aboutme div {
+  .main-section div {
     width:300px;
     padding: 20px;
     flex-direction: column;
