--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ h2, h3 {
     margin-bottom: 0;
     padding: 20px 10px 40px 10px;
     border-top: 3px solid #65660c;
-    background-color:  #e8dabf;
+    background-color:  #f7ecd6;
   }
   
   form {
