--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,13 +153,14 @@ h2, h3 {
 
   }
   .title-card {
-    width: 275px;
+    width: 18%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-right: solid #240324;
+    min-width: 275px;
     
 
     
@@ -177,8 +178,8 @@ h2, h3 {
   }
 
   .project-cards{
-    height: 200px;
-    width: 300px;
+    height: 300px;
+    min-width: 30%;
 
     margin: 20px;
     padding: 15px;
@@ -219,7 +220,7 @@ h2, h3 {
 
   #portfolioRWH{
     height: 400px;
-    width: 600px;
+    width: 100%;
     background-image: url("../images/WebCapRWH.PNG");
   }
 
@@ -270,5 +271,9 @@ h2, h3 {
   @media screen and (max-width: 768px){
     header {
       flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
     }
+
+    
   }
