--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,11 @@
 /* Universal Selector */
+:root{
+  --darkpurple: #240324; 
+  --lightcolor: whitesmoke;
+  --goldish:  #65660c;
+  --greyborder: #4F4846;
+}
+
 * {
     margin:0;
     padding:0;  
@@ -11,7 +18,7 @@
     font-family: Arial, Helvetica, sans-serif
     font-size: 20px;
     background-color: #FDF8F5;
-    color: #4F4846;
+    color: var(--greyborder);
   }
   
   h1{
@@ -29,13 +36,14 @@
       height: 60px;
       width: 100%;
       line-height: 60px;
-      background-color: #240324;
-      color: whitesmoke;
+      background-color: var(--darkpurple);
+      color: var(--lightcolor);
     
     
     
-    border-bottom: 5px solid #65660c;
+    border-bottom: 5px solid var(--goldish);
   }
+
 
   
   
@@ -52,7 +60,7 @@
   
   a {
     text-decoration: none;
-    color: whitesmoke;
+    color: var(--lightcolor);
   }
 
   main {
@@ -64,7 +72,7 @@
   
 h2, h3 {
   margin: 15px;
-  color:#240324;
+  color:var(--darkpurple);
   
 }
   
@@ -75,8 +83,8 @@ h2, h3 {
     height: 60px;
     width: 100%;
     line-height: 60px;
-    background-color: #240324;
-    color: whitesmoke;
+    background-color: var(--darkpurple);
+    color: var(--lightcolor);
   }
   
   
@@ -86,8 +94,8 @@ h2, h3 {
     position: absolute;
     margin-top: 0;
     bottom: 0;
-    border-bottom: 10px solid #4F4846;
-    color: whitesmoke;
+    border-bottom: 10px solid var(--greyborder);
+    color: var(--lightcolor);
     ;    
   }
   
@@ -107,7 +115,7 @@ h2, h3 {
     width: 100%;
     margin-bottom: 0;
     padding: 20px 10px 40px 10px;
-    border-top: 3px solid #65660c;
+    border-top: 3px solid var(--goldish);
     background-color:  #f7ecd6;
   }
   
@@ -118,7 +126,7 @@ h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid #240324;
+    border: solid var(--darkpurple);
     
     
 
@@ -140,11 +148,11 @@ h2, h3 {
     
     border: #000000;
     border-style: solid;
-    background-color: #240324;
+    background-color: var(--darkpurple);
     margin: 15px;
     padding: 5px;
     font-size: 30px;
-    color: whitesmoke;
+    color: var(--lightcolor);
   }
 
   .main-section{
@@ -160,7 +168,7 @@ h2, h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-right: solid #240324;
+    border-right: solid var(--darkpurple);
     min-width: 275px;
     
 
@@ -184,7 +192,7 @@ h2, h3 {
 
     margin: 20px;
     padding: 15px;
-    border: solid #240324;
+    border: solid var(--darkpurple);
 
     
 
@@ -211,12 +219,12 @@ h2, h3 {
     align-items: center;
 
     font-size: 25px;
-    color: #240324;
+    color: var(--darkpurple);
 
     background-color:aquamarine;
     border: 5px;
     border: solid;
-    border-color: #240324;
+    border-color: var(--darkpurple);
   }
 
   #portfolioRWH{
@@ -265,7 +273,7 @@ h2, h3 {
     color:black;
   }
 
-  #contact h3{
+  #contact h4{
     margin: 45px;
   }
 
@@ -274,7 +282,7 @@ h2, h3 {
     display: inline;
   }
   #contact a{
-    color:#240324;
+    color:var(--darkpurple);
   }
 
   @media screen and (max-width: 768px){
