--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ h2, h3 {
     font-size: 25px;
     color: var(--darkpurple);
 
-    background-color:aquamarine;
+    background-color:rgb(62, 150, 190);
     border: 5px;
     border: solid;
     border-color: var(--darkpurple);
@@ -287,6 +287,7 @@ h2, h3 {
 
   @media screen and (max-width: 768px){
     header {
+      position: absolute;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
