added basic hovor effect for proj cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,11 @@ h2, h3 {
 
   }
 
+  .project-cards:hover{
+    opacity: 75%;
+
+  }
+
   .project-preview {
     height: 120px;
     width: 150px;
