font size change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,7 @@ h2, h3 {
     align-items: center;
     border-right: solid var(--darkpurple);
     min-width: 275px;
+    font-size: x-large;
     
 
     
